--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Alien::GPG::Error.
 
 {{$NEXT}}
+    Upgrade to v1.21
 
 1.17.0 2014-11-19 00:14:09
 	Initial version.
