--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Alien::GPG::Error - Install and make available libgpg-error
 
 VERSION
-    version 1.17.0
+    version 1.21.0
 
 SYNOPSIS
         use Alien::GPG::Error;
@@ -11,7 +11,7 @@ SYNOPSIS
         my $libs = Alien::GPG::Error->libs;
 
 DESCRIPTION
-    Alien::GPG::Error installs the C library "libgpg-error".
+    Alien::GPG::Error installs the C library "libgpg-error" v1.21.
 
 SEE ALSO
     *   <https://www.gnupg.org/related_software/libgpg-error/index.html>
@@ -20,7 +20,7 @@ AUTHOR
     Alex J. G. Burzyński <ajgb@cpan.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2014 by Alex J. G. Burzyński
+    This software is copyright (c) 2016 by Alex J. G. Burzyński
     <ajgb@cpan.org>.
 
     This is free software; you can redistribute it and/or modify it under
